<resources>
    <string name="app_name">SimplePlanningPoker</string>
    <string name="title_activity_display_number">DisplayNumberActivity</string>

    <string name="title_activity_fullscreen_display_number">FullscreenDisplayNumberActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="text_0">0</string>
    <string name="text_1half">1/2</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_5">5</string>
    <string name="text_8">8</string>
    <string name="text_13">13</string>
    <string name="text_20">20</string>
    <string name="text_40">40</string>
    <string name="text_100">100</string>
    <string name="text_coffee">Coffee!</string>
    <string name="text_infinite">&#8734;</string>
    <string name="text_question">\?</string>
</resources>
