<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/text_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOneHundred"
        android:onClick="clickFunction"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignBaseline="@+id/btnFourty"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnThirteen" />

    <Button
        android:text="@string/text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnThree"
        android:onClick="clickFunction"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignBaseline="@+id/btnTwo"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTwo"
        android:onClick="clickFunction"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/btnZero"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        android:text="@string/text_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnFourty"
        android:onClick="clickFunction"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/btnEight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        android:text="@string/text_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEight"
        android:onClick="clickFunction"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_below="@+id/btnTwo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        android:text="@string/text_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnQuestion"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:onClick="clickFunction"
        android:layout_alignBaseline="@+id/btnOneHundred"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/text_1half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOneHalf"
        android:onClick="clickFunction"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/text_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnZero"
        android:onClick="clickFunction"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOne"
        android:onClick="clickFunction"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/text_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnFive"
        android:onClick="clickFunction"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignBaseline="@+id/btnThree"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/text_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnThirteen"
        android:onClick="clickFunction"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@+id/btnEight" />

    <Button
        android:text="@string/text_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTwenty"
        android:onClick="clickFunction"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignBaseline="@+id/btnThirteen"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/text_infinite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnInfinity"
        android:onClick="clickFunction"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_toRightOf="@+id/btnOneHundred"
        android:textSize="18sp"
        android:layout_toEndOf="@+id/btnOneHundred" />

    <Button
        android:text="@string/text_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickFunction"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_marginTop="35dp"
        android:id="@+id/button"
        android:textSize="18sp"
        android:layout_below="@+id/btnOneHundred"
        android:layout_toLeftOf="@+id/btnOneHundred"
        android:layout_toStartOf="@+id/btnOneHundred" />

</RelativeLayout>